--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "aws-message-bus-package",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
-  "author": "Alex Alves",
-  "license": "ISC",
+  "author": {
+    "name": "Alex Alves",
+    "url": "https://www.linkedin.com/in/alexalvess/"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "directory": "https://github.com/alexalvess/aws-message-bus-package"
+    "url": "https://github.com/alexalvess/aws-message-bus-package.git"
   },
   "dependencies": {
     "aws-sdk": "^2.1531.0",
