--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-message-bus-package",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -19,5 +19,14 @@
     "aws-sdk": "^2.1531.0",
     "sqs-consumer": "^8.1.3",
     "uuid": "^9.0.1"
-  }
+  },
+  "keywords": [
+    "message bus",
+    "message broker",
+    "aws",
+    "amazon",
+    "sqs",
+    "sns",
+    "eventBridge"
+  ]
 }
