include tags when create any resource

--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,15 @@
     "region": "eu-west-2",
     "snsArnPrefix": "arn:aws:sns:eu-west-2:000000000000",
     "sqsArnPrefix": "arn:aws:sqs:eu-west-2:000000000000",
-    "queuUrlPrefix": "http://sqs.eu-west-2.localhost.localstack.cloud:4566/000000000000"
+    "queuUrlPrefix": "http://sqs.eu-west-2.localhost.localstack.cloud:4566/000000000000",
+    "tags": [ 
+        {
+            "Key": "team",
+            "Value": "your-team-name"
+        },
+        {
+            "Key": "appName",
+            "Value": "your-app-name"
+        }
+     ]
 }
