--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jasmine"
+    "test": "jasmine 'test/unitTest/**/*.spec.js'"
   },
   "author": {
     "name": "Alex Alves",
