--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,7 @@
     "snsArn": "arn:aws:sns",
     "sqsArn": "arn:aws:sqs",
     "awsHost": "localhost.localstack.cloud",
-    "tags": [ 
+    "tags": [
         {
             "Key": "team",
             "Value": "your-team-name"
@@ -15,5 +15,6 @@
             "Key": "appName",
             "Value": "your-app-name"
         }
-     ]
+    ],
+    "testMode": false
 }
