--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,7 @@ jobs:
       run: npm install
 
     - name: Bump Version
-      run: |
-        npm version patch
-        echo "New version: $(npm view . version)"
-      id: bump_version
+      run: npm version patch
 
     - name: Publish to NPM
       run: npm publish --access public
