--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Node.js
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: 20
 
     - name: Install Dependencies
       run: npm install
 
     - name: Publish to NPM
-      run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+      uses: JS-DevTools/npm-publish@v3
+      with:
+        token: ${{secrets.NPM_AUTH_TOKEN}}
