--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
+    - name: Print Token
+      run: echo ${{ secrets.NPM_AUTH_TOKEN }}
+
     - name: Publish to NPM
       uses: JS-DevTools/npm-publish@v3
       with:
-        token: ${{secrets.NPM_AUTH_TOKEN}}
+        token: ${{ secrets.NPM_AUTH_TOKEN }}
