--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,12 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: "20"
 
     - name: Install Dependencies
       run: npm install
 
-    - name: Print Token
-      run: echo "${{ secrets.NPM_AUTH_TOKEN }}" 
-
     - name: Publish to NPM
-      uses: JS-DevTools/npm-publish@v3
-      with:
-        token: ${{ secrets.NPM_AUTH_TOKEN }}
+      run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
