--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "aws-message-bus-package",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "test": "jasmine --config=jasmine.json",
     "version": "npm-version-up",
-    "postversion": "git push && git push --tags"
+    "postversion": "git commit -am 'chore: bump version' && git push && git push --tags"
   },
   "author": {
     "name": "Alex Alves",
