--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "jasmine": "^5.1.0",
-    "testcontainers": "^10.5.0"
+    "testcontainers": "^10.5.0",
+    "typescript": "^5.4.5"
   },
   "keywords": [
     "message bus",
