--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "build:clean": "rm -rf ./build",
+    "build:esm": "tsc -p ./tsconfig.esm.json",
+    "build:cjs": "tsc -p ./tsconfig.cjs.json",
+    "build:types": "tsc -p ./tsconfig.types.json",
+    "build": "npm-run-all build:clean build:esm build:cjs build:types",
     "test": "jasmine --config=jasmine.json"
   },
   "author": {
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "jasmine": "^5.1.0",
+    "npm-run-all": "^4.1.5",
     "testcontainers": "^10.5.0",
     "typescript": "^5.4.5"
   },
