--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "dotenv": "^16.4.5",
     "jasmine": "^5.1.0",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "testcontainers": "^10.5.0",
+    "testcontainers": "^10.9.0",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   },
   "keywords": [
