--- a/package.json
+++ b/package.json
@@ -37,6 +37,14 @@
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testTimeout": 100000,
+    "testMatch": [
+      "**/*.spec.ts"
+    ]
+  },
   "keywords": [
     "message bus",
     "bus",
