--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@aws-sdk/client-scheduler": "^3.583.0",
     "@aws-sdk/client-sns": "^3.583.0",
     "@aws-sdk/client-sqs": "^3.583.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.51.1",
+    "@opentelemetry/sdk-trace-base": "^1.24.1",
     "@types/uuid": "^9.0.8",
     "sqs-consumer": "^10.3.0",
     "uuid": "^9.0.1"
