--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@aws-sdk/client-sqs": "^3.583.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.51.1",
     "@opentelemetry/sdk-trace-base": "^1.24.1",
+    "@types/amqplib": "^0.10.5",
     "@types/uuid": "^9.0.8",
+    "amqplib": "^0.10.4",
     "sqs-consumer": "^10.3.0",
     "uuid": "^9.0.1"
   },
