--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,16 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
+    - name: Configure Git credentials
+      run: |
+        git config --global user.email "alexalves2501@hotmail.com"
+        git config --global user.name "Alex Alves"
+
+jobs:
+  create_tag_and_release:
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Extract package version
       id: version
       run: echo ::set-output name=version::$(node -e "console.log(require('./package.json').version)")
