--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,9 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
-    - name: Configure Git credentials
-      run: |
-        git config --global user.email "alexalves2501@hotmail.com"
-        git config --global user.name "Alex Alves"
-
   create_tag_and_release:
     runs-on: ubuntu-latest
+    # needs: publish
 
     steps:
     - name: Checkout code
@@ -48,6 +44,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+
+    - name: Configure Git credentials
+      run: |
+        git config --global user.email "alexalves2501@hotmail.com"
+        git config --global user.name "Alex Alves"
 
     - name: Extract package version
       id: version
