--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,9 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
+        force: true
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
+        branch: ${{ github.head_ref }}
 
     - name: Install Dependencies
       run: npm install
