--- a/.github/workflows/1_update_pkg_version.yml
+++ b/.github/workflows/1_update_pkg_version.yml
@@ -7,7 +7,7 @@ on:
       - '**'
 
 jobs:
-  publish:
+  update_pkg_version:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,4 +34,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
+        branch: ${{ github.head_ref }}
