--- a/.github/workflows/2_publish_pkg.yml
+++ b/.github/workflows/2_publish_pkg.yml
@@ -1,6 +1,9 @@
 name: Publish to NPM
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     types: [closed]
     branches:
@@ -9,7 +12,7 @@ on:
 jobs:
   create_tag_and_release:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true || github.event_name == 'push' }}
 
     steps:
     - name: Checkout code
@@ -29,16 +32,30 @@ jobs:
       id: version
       run: echo ::set-output name=version::$(node -e "console.log(require('./package.json').version)")
 
+    - name: Check if tag exists
+      id: tag_exists
+      run: |
+        if git rev-parse "v${{ env.version }}" >/dev/null 2>&1; then
+          echo "Tag v${{ env.version }} already exists"
+          echo "exists=true" >> $GITHUB_ENV
+        else
+          echo "Tag v${{ env.version }} does not exist"
+          echo "exists=false" >> $GITHUB_ENV
+        fi
+
     - name: Create tag
+      if: env.exists == 'false'
       run: git tag -a v${{ steps.version.outputs.version }} -m "Version ${{ steps.version.outputs.version }}"
 
     - name: Push tag to GitHub
+      if: env.exists == 'false'
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tags: v${{ steps.version.outputs.version }}
 
     - name: Create release
+      if: env.exists == 'false'
       id: create_release
       uses: actions/create-release@v1
       env:
