--- a/.github/workflows/2_publish_pkg.yml
+++ b/.github/workflows/2_publish_pkg.yml
@@ -35,11 +35,11 @@ jobs:
     - name: Check if tag exists
       id: tag_exists
       run: |
-        if git rev-parse "v${{ env.version }}" >/dev/null 2>&1; then
-          echo "Tag v${{ env.version }} already exists"
+        if git rev-parse "v${{ steps.version.outputs.version }}" >/dev/null 2>&1; then
+          echo "Tag v${{ steps.version.outputs.version }} already exists"
           echo "exists=true" >> $GITHUB_ENV
         else
-          echo "Tag v${{ env.version }} does not exist"
+          echo "Tag v${{ steps.version.outputs.version }} does not exist"
           echo "exists=false" >> $GITHUB_ENV
         fi
 
@@ -54,20 +54,8 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tags: v${{ steps.version.outputs.version }}
 
-    - name: Check if release already exists
-      id: check_release
-      run: |
-        release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" -X GET "https://api.github.com/repos/${{ github.repository }}/releases/tags/v${{ steps.version.outputs.version }}" | jq -r '.id // empty')
-        if [ -n "$release_id" ]; then
-          echo "Release v${{ steps.version.outputs.version }} already exists"
-          echo "::set-output name=release_exists::true"
-        else
-          echo "Release v${{ steps.version.outputs.version }} does not exist"
-          echo "::set-output name=release_exists::false"
-        fi
-
     - name: Create release
-      if: env.exists == 'false' && steps.check_release.outputs.release_exists != 'true'
+      if: env.exists == 'false'
       id: create_release
       uses: actions/create-release@v1
       env:
