--- a/.github/workflows/2_publish_pkg.yml
+++ b/.github/workflows/2_publish_pkg.yml
@@ -35,7 +35,9 @@ jobs:
     - name: Check if tag exists
       id: tag_exists
       run: |
-        if git rev-parse "v${{ steps.version.outputs.version }}" >/dev/null 2>&1; then
+        git fetch --tags
+        tags=$(git tag -l)
+        if echo "$tags" | grep -q "v${{ steps.version.outputs.version }}"; then
           echo "Tag v${{ steps.version.outputs.version }} already exists"
           echo "exists=true" >> $GITHUB_ENV
         else
