--- a/.github/workflows/1_update_pkg_version.yml
+++ b/.github/workflows/1_update_pkg_version.yml
@@ -27,8 +27,17 @@ jobs:
         git config --global user.email "alexalves2501@hotmail.com"
         git config --global user.name "github-actions[bot]"
 
+    - name: Determine branch name
+      id: branch_name
+      run: echo ::set-output name=branch_name::${GITHUB_REF#refs/heads/}
+
     - name: Patch Version Package
-      run: npm version patch
+      run: |
+        if [ "${{ steps.branch_name.outputs.branch_name }}" = "main" ]; then
+          npm version patch
+        else
+          npm version prepatch --preid=beta
+        fi
 
     - name: Push changes
       uses: ad-m/github-push-action@master
