--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "event-message-broker",
-  "version": "1.0.10-beta.0",
+  "version": "1.0.10",
   "description": "",
   "main": "src/index.js",
   "scripts": {
