--- a/.github/workflows/publish_pkg.yml
+++ b/.github/workflows/publish_pkg.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   create_tag_and_release:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true || github.event_name == 'push' }}
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true }}
 
     steps:
     - name: Checkout code
