--- a/.github/workflows/update_pkg_test.yml
+++ b/.github/workflows/update_pkg_test.yml
@@ -43,23 +43,23 @@ jobs:
       id: extract_version
       run: |
         VERSION=$(node -e "console.log(require('./package.json').version)")
-        echo "::set-output name=version::${VERSION}"
+        echo "version=${VERSION}" >> $GITHUB_ENV
     
     - name: Extract package pervious version
       id: extract_previous_version
-      run: echo ::set-output name=previousVersion::$(node -e "console.log(require('./package.json').previousVersion)")
+      run: echo "previousVersion=$(node -e "console.log(require('./package.json').previousVersion))" >> $GITHUB_ENV
 
     - name: Chech if is beta version
       id: check_version
       run: |
-        if [[ "${{ steps.check_version.outputs.is_beta }}" == *"beta"* ]]; then
-          echo "::set-output name=is_beta::true"
+        if [[ "${{ env.version }}" == *"beta"* ]]; then
+          echo "is_beta=true" >> $GITHUB_ENV
         else
-          echo "::set-output name=is_beta::false"
+          echo "is_beta=false" >> $GITHUB_ENV
         fi
     
     - name: Save Current Version
-      run: node -e "const fs = require('fs'); let pkg = JSON.parse(fs.readFileSync('./package.json')); pkg['previousVersion'] = '${{ steps.extract_version.outputs.version }}'; fs.writeFileSync('./package.json', JSON.stringify(pkg, null, 2));"
+      run: node -e "const fs = require('fs'); let pkg = JSON.parse(fs.readFileSync('./package.json')); pkg['previousVersion'] = '${{ env.version }}'; fs.writeFileSync('./package.json', JSON.stringify(pkg, null, 2));"
 
     - name: Patch Version Package
       run: |
