update type input

--- a/.github/workflows/update_pkg_version.yml
+++ b/.github/workflows/update_pkg_version.yml
@@ -5,6 +5,7 @@ on:
     inputs:
       version-type:
         description: "Choose version type"
+        type: choice
         required: true
         default: "patch"
         options:
@@ -12,6 +13,7 @@ on:
           - minor
           - major
           - beta
+          - downgrade
 
 
 permissions:
