--- a/.github/workflows/update_pkg.yml
+++ b/.github/workflows/update_pkg.yml
@@ -6,7 +6,7 @@ on:
       version-command:
         required: true
         type: string
-    output:
+    outputs:
       is_beta: ${{ jobs.update_pkg_version.outputs.is_beta }}
 
 jobs:
