--- a/.github/workflows/update_pkg_version.yml
+++ b/.github/workflows/update_pkg_version.yml
@@ -24,29 +24,4 @@ jobs:
     name: Update package - Manual
     uses: ./.github/workflows/update_pkg.yml
     with:
-      version-command: |
-        if [[ "${{ github.event.inputs.version-type }}" == "patch" ]]; then
-          npm version patch --no-git-tag-version
-        elif [[ "${[ github.event.inputs.version-type }}" == "minor" ]]; then
-          npm version minor --no-git-tag-version
-        elif [[ "${{ github.event.inputs.version-type }}" == "major" ]]; then
-          npm version major --no-git-tag-version
-        elif [[ "${{ github.event.inputs.version-type }}" == "beta" ]]; then
-          if [ "${{ needs.update_pkg_stable_version.outputs.is_beta }}" == "true" ]; then
-            npm version prerelease --preid=beta --no-git-tag-version
-          else
-            npm version prepatch --preid=beta --no-git-tag-version
-          fi
-        elif [[ "${{ github.event.inputs.version-type }}" == "downgrade" ]]; then
-          npm version ${{ needs.update_pkg_stable_version.outputs.previous_version }}
-
-          node -e "
-          const fs = require('fs');
-          const pkg = JSON.parse(fs.readFileSync('./package.json', 'utf8'));
-          
-          if (pkg.previousVersions && pkg.previousVersions.length > 0) {
-            pkg.previousVersions.pop(); // Remove last item
-          }
-          
-          fs.writeFileSync('./package.json', JSON.stringify(pkg, null, 2));
-        fi
+      command-type: ${{ github.event.inputs.version-type }}
